log
Thu, May 15, 2025  3:50:57 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, May 15, 2025  3:59:56 PM: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
Compilation failed
test.c: In function 'get_adj_nodes':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
862e1e8
Thu, May 15, 2025  4:00:09 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1.exe: all warnings being treated as errors
6bc4023
Thu, May 15, 2025  4:00:24 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1.exe: all warnings being treated as errors
e0cf076
Thu, May 15, 2025  4:01:07 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
f6bbe23
Thu, May 15, 2025  4:02:25 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
1b52c17
Thu, May 15, 2025  4:13:24 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
ccb5976
Thu, May 15, 2025  4:13:48 PM: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
79c0269
Thu, May 15, 2025  4:14:39 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4ea869d
Thu, May 15, 2025  4:16:50 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:63:24: error: statement with no effect [-Werror=unused-value]
             arr[i] = 0;n
                        ^
sudoku.c:64:9: error: expected ';' before '}' token
         }
         ^
cc1.exe: all warnings being treated as errors
10e4da2
Thu, May 15, 2025  4:17:01 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e6f19b2
Thu, May 15, 2025  4:49:29 PM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
65eccdb
